--- a/less/agency.less
+++ b/less/agency.less
@@ -55,8 +55,8 @@ div.brand-wrapper {
         padding-right: 10px;
         bottom: 5px;
         position: relative;
-        height: 32px;
-        width: 32px;
+        height: 50px;
+        width: 50px;
         display: block;
         background-image: url('../img/logo.png');
         border-radius: 4px;
@@ -80,27 +80,9 @@ div.brand-wrapper {
             border-radius: 4px;
             .my-transition(1s);
         }
-        .color-pc {
-            color: darken(@color-pc, 16.7%);
-            .my-transition(1s);
-
-        }
-        .color-shards{
-            color: darken(@color-shards, 16.7%);
-            .my-transition(1s);
-        }
-
     }
 }
 
-
-
-.color-pc {
-    color: @color-pc;
-}
-.color-shards{
-    color: @color-shards;   
-}
 
 .img-centered {
     margin: 0 auto;
@@ -133,11 +115,10 @@ div.brand-wrapper {
 
 // Custom Navigation Bar
 .navbar-custom {
-    background-color: @gray-lightest;
+    background-color: @theme-primary;
     border-color: transparent;
     .navbar-brand {
-        color: @theme-primary;
-        .script-font;
+        color: @white;
         &:hover,
         &:focus,
         &:active,
@@ -176,12 +157,12 @@ div.brand-wrapper {
     }
     .navbar-nav>.active>a {
         border-radius: 0;
-        color: white;
+        color: @white;
         background-color: @theme-primary;
     }
     .navbar-nav>.active>a:hover,
     .navbar-nav>.active>a:focus {
-        color: white;
+        color: @white;
         background-color: darken(@theme-primary, 10%);
     }
     .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
